--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xenova/transformers": "^2.17.2",
     "aws4": "^1.13.2",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -25,6 +26,7 @@
     "puppeteer": "^24.32.1",
     "puppeteer-core": "^24.32.1",
     "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "string-similarity": "^4.0.4"
   }
 }
